Req #18 update schedule

--- a/schedule.html
+++ b/schedule.html
@@ -64,7 +64,8 @@
     <section id="call-for-papers" class="section call-for-papers">
             <div class="container">
 			<div class="row">
-			<div class="col-md-6">
+			<div class="col-md-1"></div>
+			<div class="col-md-10">
                 <div class="row">
                     <div class="col-md-12">
                         <h3 class="section-title">30th Jan - Tuesday</h3>           
@@ -74,29 +75,23 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-center">8:30 - 9:00</div>
-                            <div class="panel-body text-center"> <h3>Registration</h3></div>
+                            <div class="panel-heading text-left">08:30 - 09:00 <b>Registration</b></div>
                         </div>
                     </div>					
                 </div>
                 <div class="row">
 					<div class="col-md-12">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-center">9:00 - 9:30</div>
-                            <div class="panel-body text-center"> 
-								<h3>Opening</h3>
-								<h4 class="panel-body text-center">Track A (B032)</h4> 
-							</div>
+                            <div class="panel-heading text-left">09:00 - 09:30 <b>Opening (B032)</b></div>
                         </div>
                     </div>					
                 </div>
                 <div class="row">
 					<div class="col-md-12">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-center">9:30 - 11:00</div>
-                            <div class="panel-body text-center"> 
-								<h3>Invited Speaker</h3>
-								<h4 class="panel-body text-center">Track A (B032)</h4> 
+                            <div class="panel-heading text-left">09:30 - 11:00 <b>Invited Talk: Hugo Peixoto, PhD (B032)</b></div>
+                            <div class="panel-body text-left"> 								
+								<ul><li>The Evolution of Information Systems in Healthcare: A Retrospective Review</li></ul> 
 							</div>     
                         </div>
                     </div>
@@ -104,18 +99,19 @@
 				<div class="row">	
 					<div class="col-md-12">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-center">11:00 - 12:00</div>
-                            <div class="panel-body text-center"> <h3>Coffee Break</h3></div>
+                            <div class="panel-heading text-left">11:00 - 12:00 <b>Coffee Break</b></div>
                         </div>
                     </div>					
                 </div>
                 <div class="row">
 					<div class="col-md-12">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-center">12:00 - 13:00</div>
-                            <div class="panel-body text-center">
-								<h3>Session 1</h3>							
-								<h4 class="panel-body text-center">Track A (B032)</h4>							
+                            <div class="panel-heading text-left">12:00 - 13:00 <b>Session 1: Multi-agent Systems (B032)</b></div>
+                            <div class="panel-body text-left">	
+								<ul>
+									<li>Multidimensional Byzantine Approximate Agreement in Cyber-Physical Systems with Trust</li>
+									<li>Improving the efficiency of air traffic controllers in simulated environments</li>
+								</ul>	
 							</div>      
                         </div>
                     </div>					
@@ -123,8 +119,7 @@
                 <div class="row">
 					<div class="col-md-12">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-center">13:00 - 14:30</div>
-                            <div class="panel-body text-center"> <h3>Lunch</h3></div>
+                            <div class="panel-heading text-left">13:00 - 14:30 <b>Lunch</b></div>
                         </div>
                     </div>
                 </div>
@@ -132,10 +127,13 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-center">14:30 - 16:00</div>
-                            <div class="panel-body text-center"> 
-								<h3>Session 2</h3> 
-								<h4 class="panel-body text-center">Track A (B032)</h4> 
+                            <div class="panel-heading text-left">14:30 - 16:00 <b>Session 2: Data Analysis (B032)</b></div>
+                            <div class="panel-body text-left"> 
+								<ul>
+									<li>Metamorphic Virus Detection through Data Compression</li>
+									<li>Outlier Identification in Multivariate Time Series: Boilers Case Study</li>
+									<li>Automated Fare Collection Data For Measuring Socio-economic Impacts On The Transport Supply*</li>
+								</ul>
 							</div> 							
                         </div>
                     </div>					
@@ -143,25 +141,28 @@
                 <div class="row">
 					<div class="col-md-12">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-center">16:00 - 17:00</div>
-                            <div class="panel-body text-center"> <h3>Coffee Break</h3></div>
+                            <div class="panel-heading text-left">16:00 - 17:00 <b>Coffee Break</b></div>
                         </div>
                     </div>					
                 </div>
                 <div class="row">
 					<div class="col-md-12">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-center">17:00 - 19:30</div>
-                            <div class="panel-body text-center"> 
-								<h3>Session 3</h3>  
-								<h4 class="panel-body text-center">Track A (B032)</h4> 
+                            <div class="panel-heading text-left">17:00 - 19:30 <b>Session 3: Machine Learning (B032)</b></div>
+                            <div class="panel-body text-left">
+								<ul>
+									<li>Ensemble Weighting for Quantile Regression</li>
+									<li>A Study of Novelty Detection in Data Streams Using Different Unsupervised Approaches</li>
+									<li>Predicting winning teams for regular season of the NBA</li>
+									<li>Tuberculosis Classification and Drug Resistance Detection in Medical Images with Deep Learning</li>
+								</ul>
 							</div>							
                         </div>
                     </div>
                 </div>				
-				
-				</div>
-				<div class="col-md-6">
+				<hr>
+			<!--/div>
+			<div class="col-md-6"-->
                 <div class="row">
                     <div class="col-md-12">
                         <h3 class="section-title">31th Jan - Wednesday</h3>					
@@ -171,8 +172,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-center">8:30 - 9:00</div>
-                            <div class="panel-body text-center"> <h3>Registration</h3></div>
+                            <div class="panel-heading text-left">08:30 - 09:00 <b>Registration</b></div>
                         </div>
                     </div>
 				</div>				
@@ -180,19 +180,24 @@
                 <div class="row">
 					<div class="col-md-6">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-center">9:00 - 10:30</div>
-                            <div class="panel-body text-center"> 
-								<h3>Session 6</h3>
-								<h4 class="panel-body text-center">Track A (B032)</h4>    
+                            <div class="panel-heading text-left">09:00 - 10:30 <b>Session 4: Bioinformatics, Education and Gamification (B032)</b></div>
+                            <div class="panel-body text-left">
+								<ul>
+									<li>Upper Limbs Movement analysis for Medical classification of Breast Cancer Patients</li>
+									<li>Neurocognitive stimulation game: Serious game with adaptive difficulty for stimulation and assessment</li>
+									<li>Student-Centered Learning Environments for Self-Regulated Project-Based Learning in Higher Education: Qualification and Selection Study</li>
+								</ul>   
 							</div>
                         </div>
                     </div>
 					<div class="col-md-6">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-center">9:00 - 10:30</div>
-                            <div class="panel-body text-center">
-								<h3>Session 7</h3>
-							  	<h4 class="panel-body text-center">Track B (B034)</h4>
+                            <div class="panel-heading text-left">09:00 - 10:30 <b>Session 5: Computer Vision and Logic Programming (B034)</b></div>
+                            <div class="panel-body text-left">
+								<ul>
+									<li>Computer-Vision-based surveillance ofIntelligent Transportation Systems</li>
+									<li>A proposal for time extraction by matching LKIF Core and OWL-Time Ontologies</li>
+								</ul>
 							</div>
                         </div>
                     </div>
@@ -202,27 +207,33 @@
                 <div class="row">
 					<div class="col-md-12">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-center">10:30 - 11:30</div>
-                            <div class="panel-body text-center"> <h3>Coffee Break</h3></div>
+                            <div class="panel-heading text-left">10:30 - 11:30 <b>Coffee Break</b></div>
                         </div>
                     </div>
 				</div>	
 				<div class="row">	
 					<div class="col-md-6">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-center">11:30 - 13:00</div>
-                            <div class="panel-body text-center"> 
-								<h3>Session 4</h3>
-							  	<h4 class="panel-body text-center">Track A (B032)</h4>    
+                            <div class="panel-heading text-left">11:30 - 13:00 <b>Session 6: Advanced InformationExtraction and ML (B032)</b></div>
+                            <div class="panel-body text-left">
+								<ul>
+									<li>Topic categorization in Portuguese news articles</li>
+									<li>NER: Supervised System to Recognize Participants and Location in Criminal News</li>
+									<li>Sentiment analysis techniques applied to regression tasks</li>
+								</ul>
 							</div>
                         </div>
                     </div>
 					<div class="col-md-6">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-center">11:30 - 13:00</div>
-                            <div class="panel-body text-center"> 
-								<h3>Session 5</h3>
-							  	<h4 class="panel-body text-center">Track B (B034)</h4> 
+                            <div class="panel-heading text-left">11:30 - 13:00 <b>Session 7: Blockchain and Encryptation (B034)</b></div>
+                            <div class="panel-body text-left">
+								<ul>
+									<li>Design of an access control system through a keyboard in the handling of an elevator</li>
+									<li>The contribution of blockchain technology for business innovation</li>
+									<li>Towards an Access Control System for IoT on Blockchain</li>
+									<li>Performance Analysis of three Classical Encryption Algorithms, Simple Substitution, Caeser, and Periodic Permutation in encrypting database transactions</li>
+								</ul>
 							</div>
                         </div>
                     </div>
@@ -231,8 +242,7 @@
                 <div class="row">
 					<div class="col-md-12">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-center">13:00 - 14:30</div>
-                            <div class="panel-body text-center"> <h3>Lunch</h3></div>
+                            <div class="panel-heading text-left">13:00 - 14:30 <b>Lunch</b></div>
                         </div>
                     </div>
                 </div>				
@@ -240,16 +250,17 @@
                 <div class="row">
 					<div class="col-md-12">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-center">14:30 - 16:00</div>
-                            <div class="panel-body text-center"> <h3>Invited Speaker</h3></div>
+                            <div class="panel-heading text-left">14:30 - 16:00 <b>Invited Talk: Luis Paulo Reis, PhD (B032)</b></div>
+                            <div class="panel-body text-left"> 
+							<ul><li>High-Level Learning and Cooperation for Intelligent Robotic Teams</li></ul>
+							</div>							
                         </div>
                     </div>
                 </div>
                 <div class="row">
 					<div class="col-md-12">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-center">16:00 - 17:00</div>
-                            <div class="panel-body text-center"> <h3>Coffee Break</h3></div>
+                            <div class="panel-heading text-left">16:00 - 17:00 <b>Coffee Break</b></div>
                         </div>
                     </div>
                 </div>				
@@ -257,19 +268,24 @@
                 <div class="row">
 					<div class="col-md-6">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-center">17:00 - 19:00</div>
-                            <div class="panel-body text-center"> 
-								<h3>Session 8</h3>
-								<h4 class="panel-body text-center">Track A (B032)</h4>    
+                            <div class="panel-heading text-left">17:00 - 19:00 <b>Session 8: System Security and Networks (B032)</b></div>
+                            <div class="panel-body text-left">
+								<ul>
+									<li>Heartbeat Biometrics: A Survey</li>
+									<li>A framework to automate network packets construction</li>
+									<li>A network packets sniffer with real-time graphical analytics</li>
+								</ul>
 							</div>
                         </div>
                     </div>
 					<div class="col-md-6">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-center">17:00 - 19:00</div>
-                            <div class="panel-body text-center"> 
-								<h3>Session 9</h3>
-							  	<h4 class="panel-body text-center">Track B (B034)</h4>
+                            <div class="panel-heading text-left">17:00 - 19:00 <b>Session 9: Distributed Computing (B034)</b></div>
+                            <div class="panel-body text-left">
+								<ul>
+									<li>Utopia: A Generic Software-Defined Storage Architecture</li>
+									<li>State Synchronization by State Decomposition</li>
+								</ul>
 							</div>
                         </div>
                     </div>
@@ -278,8 +294,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-center">19:00 - 20:00</div>
-                            <div class="panel-body text-center"> <h3>Closing</h3></div>
+                            <div class="panel-heading text-left">19:00 - 20:00 <b>Closing (B032)</b></div>
                         </div>
                     </div>
                 </div>
@@ -287,8 +302,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-center">21:00 - 23:00</div>
-                            <div class="panel-body text-center"> <h3>Dinner </h3></div>
+                            <div class="panel-heading text-left">21:00 - 23:00 <b>Dinner </b></div>
                         </div>
                     </div>
 				</div>	
