--- a/cfp.html
+++ b/cfp.html
@@ -172,24 +172,33 @@ include, but are not limited to, the following topics:
                         </div>
                         <div class="col-md-2">
                             <div class="panel panel-default">
-                            <div class="panel-heading text-center">Registration<br> Closed</div>
-                            <div class="panel-body text-center"> <h3><strike>13/01/2018</strike> <br>
-																	 25<br> January <br> 2018</h3></div>
+								<div class="panel-heading text-center">Registration<br> Closed</div>
+								<div class="panel-body text-center"> 
+									<h3><strike>13/01/2018</strike> <br>
+									<h3><strike>25/01/2018</strike> <br>
+									26<br> January <br> 2018</h3>
+								</div>
                             </div>
                         </div>
                         <div class="col-md-2">
                             <div class="panel panel-default">
                                 <div class="panel-heading text-center">Authors<br>Notification</div>
-                            <div class="panel-body text-center"> <h3><strike>15/01/2018</strike> <br>
-																	23<br>January <br> 2018</h3></div>
-                            </div>
+								<div class="panel-body text-center"> 
+									<h3><strike>15/01/2018</strike> <br>
+									<h3><strike>23/01/2018</strike> <br>
+									26<br>January <br> 2018</h3>
+								</div>
+							</div>
                         </div>
                         
                         <div class="col-md-2">
                             <div class="panel panel-default">
                                 <div class="panel-heading text-center">Camera-Ready<br>Due</div>
-                            <div class="panel-body text-center"> <h3><strike>22/01/2018</strike> <br>
-																	25<br> January <br> 2018</h3></div>
+								<div class="panel-body text-center"> 
+									<h3><strike>22/01/2018</strike> <br>
+									<h3><strike>25/01/2018</strike> <br>
+									28<br> January <br> 2018</h3>
+								</div>
                             </div>
                         </div>
                         
