--- a/cfp.html
+++ b/cfp.html
@@ -157,26 +157,36 @@ include, but are not limited to, the following topics:
                         <div class="col-md-2">
                             <div class="panel panel-default">
                                 <div class="panel-heading text-center">Paper <br>Submission Due</div>
-                                <div class="panel-body text-center"> <h3><strike>18/12/2017</strike> <br>
-								                                         <strike>28/12/2017</strike> <br>
-								                                         03<br> January <br> 2018</h3></div>
+                                <div class="panel-body text-center"> 
+									<h3>
+										<strike>18/12/2017</strike> <br>
+										<strike>28/12/2017</strike> <br>
+										03<br> January <br> 2018
+									</h3>
+								</div>
                             </div>
                         </div>
                         <div class="col-md-2">
                             <div class="panel panel-default">
                                 <div class="panel-heading text-center">Posters/Short Paper<br>Submission Due</div>
-                                <div class="panel-body text-center"> <h3><strike>18/12/2017</strike> <br>
-								                                          <strike>28/12/2017</strike> <br>
-								                                         03<br> January <br> 2018</h3></div>
+                                <div class="panel-body text-center"> 
+									<h3>
+										<strike>18/12/2017</strike> <br>
+										<strike>28/12/2017</strike> <br>
+										03<br> January <br> 2018
+									</h3>
+								</div>
                             </div>
                         </div>
                         <div class="col-md-2">
                             <div class="panel panel-default">
 								<div class="panel-heading text-center">Registration<br> Closed</div>
 								<div class="panel-body text-center"> 
-									<h3><strike>13/01/2018</strike> <br>
-									<h3><strike>25/01/2018</strike> <br>
-									26<br> January <br> 2018</h3>
+									<h3>
+										<strike>13/01/2018</strike> <br>
+										<strike>25/01/2018</strike> <br>
+										26<br> January <br> 2018
+									</h3>
 								</div>
                             </div>
                         </div>
@@ -184,9 +194,11 @@ include, but are not limited to, the following topics:
                             <div class="panel panel-default">
                                 <div class="panel-heading text-center">Authors<br>Notification</div>
 								<div class="panel-body text-center"> 
-									<h3><strike>15/01/2018</strike> <br>
-									<h3><strike>23/01/2018</strike> <br>
-									26<br>January <br> 2018</h3>
+									<h3>
+										<strike>15/01/2018</strike> <br>
+										<strike>23/01/2018</strike> <br>
+										26<br>January <br> 2018
+									</h3>
 								</div>
 							</div>
                         </div>
@@ -195,9 +207,11 @@ include, but are not limited to, the following topics:
                             <div class="panel panel-default">
                                 <div class="panel-heading text-center">Camera-Ready<br>Due</div>
 								<div class="panel-body text-center"> 
-									<h3><strike>22/01/2018</strike> <br>
-									<h3><strike>25/01/2018</strike> <br>
-									28<br> January <br> 2018</h3>
+									<h3>
+										<strike>22/01/2018</strike> <br>
+										<strike>25/01/2018</strike> <br>
+										28<br> January <br> 2018
+									</h3>
 								</div>
                             </div>
                         </div>
