Req #18 update schedule

--- a/schedule.html
+++ b/schedule.html
@@ -75,7 +75,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-left">08:30 - 09:00 <b>Registration</b></div>
+                            <div class="panel-heading text-left">08:30 - 09:00 <b>Registration (Secretariat A1)</b></div>
                         </div>
                     </div>					
                 </div>
@@ -99,18 +99,18 @@
 				<div class="row">	
 					<div class="col-md-12">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-left">11:00 - 12:00 <b>Coffee Break</b></div>
+                            <div class="panel-heading text-left">11:00 - 12:00 <b>Coffee Break (Coffee-lounge)</b></div>
                         </div>
                     </div>					
                 </div>
                 <div class="row">
 					<div class="col-md-12">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-left">12:00 - 13:00 <b>Session 1: Multi-agent Systems (B032)</b></div>
+                            <div class="panel-heading text-left">12:00 - 13:00 <b>Session 1: Multi-agent Systems (B032) - Session Chair: Simão Reis</b></div>
                             <div class="panel-body text-left">	
 								<ul>
-									<li>Multidimensional Byzantine Approximate Agreement in Cyber-Physical Systems with Trust</li>
-									<li>Improving the efficiency of air traffic controllers in simulated environments</li>
+									<li>Multidimensional Byzantine Approximate Agreement in Cyber-Physical Systems with Trust <i>(Arnaldo Pereira)</i></li>
+									<li>Improving the efficiency of air traffic controllers in simulated environments <i>(Tiago Neto)</i></li>
 								</ul>	
 							</div>      
                         </div>
@@ -127,12 +127,12 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-left">14:30 - 16:00 <b>Session 2: Data Analysis (B032)</b></div>
+                            <div class="panel-heading text-left">14:30 - 16:00 <b>Session 2: Data Analysis (B032) - Session Chair: Marisa Reis</b></div>
                             <div class="panel-body text-left"> 
 								<ul>
-									<li>Metamorphic Virus Detection through Data Compression</li>
-									<li>Outlier Identification in Multivariate Time Series: Boilers Case Study</li>
-									<li>Automated Fare Collection Data For Measuring Socio-economic Impacts On The Transport Supply*</li>
+									<li>Metamorphic Virus Detection through Data Compression <i>(Simão Reis)</i></li>
+									<li>Outlier Identification in Multivariate Time Series: Boilers Case Study <i>(Joana Ribeiro)</i></li>
+									<li>Automated Fare Collection Data For Measuring Socio-economic Impacts On The Transport Supply* <i>(Yassine Baghoussi)</i></li>
 								</ul>
 							</div> 							
                         </div>
@@ -141,20 +141,20 @@
                 <div class="row">
 					<div class="col-md-12">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-left">16:00 - 17:00 <b>Coffee Break</b></div>
+                            <div class="panel-heading text-left">16:00 - 17:00 <b>Coffee Break (Coffee-lounge)</b></div>
                         </div>
                     </div>					
                 </div>
                 <div class="row">
 					<div class="col-md-12">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-left">17:00 - 19:30 <b>Session 3: Machine Learning (B032)</b></div>
+                            <div class="panel-heading text-left">17:00 - 19:00 <b>Session 3: Machine Learning (B032) - Session Chair: Yassine Baghoussi</b></div>
                             <div class="panel-body text-left">
 								<ul>
-									<li>Ensemble Weighting for Quantile Regression</li>
-									<li>A Study of Novelty Detection in Data Streams Using Different Unsupervised Approaches</li>
-									<li>Predicting winning teams for regular season of the NBA</li>
-									<li>Tuberculosis Classification and Drug Resistance Detection in Medical Images with Deep Learning</li>
+									<li>Ensemble Weighting for Quantile Regression <i>(Marisa Reis)</i></li>
+									<li>A Study of Novelty Detection in Data Streams Using Different Unsupervised Approaches <i>(Kemilly Dearo Garcia)</i></li>
+									<li>Predicting winning teams for regular season of the NBA <i>(Saulo Carpio)</i></li>
+									<li>Tuberculosis Classification and Drug Resistance Detection in Medical Images with Deep Learning <i>(João Figueira Silva, Jorge Miguel Silva, Eduardo Pinho and Carlos Costa)</i></li>
 								</ul>
 							</div>							
                         </div>
@@ -172,67 +172,54 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-left">08:30 - 09:00 <b>Registration</b></div>
+                            <div class="panel-heading text-left">08:30 - 09:00 <b>Registration (Secretariat A1)</b></div>
                         </div>
                     </div>
 				</div>				
 				
                 <div class="row">
-					<div class="col-md-6">
+					<div class="col-md-12">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-left">09:00 - 10:30 <b>Session 4: Bioinformatics, Education and Gamification (B032)</b></div>
+                            <div class="panel-heading text-left">09:00 - 10:30 <b>Session 4: Bioinformatics, Education and Gamification (B032) - Session Chair: André Santos</b></div>
                             <div class="panel-body text-left">
 								<ul>
-									<li>Upper Limbs Movement analysis for Medical classification of Breast Cancer Patients</li>
-									<li>Neurocognitive stimulation game: Serious game with adaptive difficulty for stimulation and assessment</li>
-									<li>Student-Centered Learning Environments for Self-Regulated Project-Based Learning in Higher Education: Qualification and Selection Study</li>
+									<li>Upper Limbs Movement analysis for Medical classification of Breast Cancer Patients <i>(António Guerra and Hélder P. Oliveira)</i></li>
+									<li>Neurocognitive stimulation game: Serious game with adaptive difficulty for stimulation and assessment <i>(João Costa)</i></li>
+									<li>Student-Centered Learning Environments for Self-Regulated Project-Based Learning in Higher Education: Qualification and Selection Study <i>(Mohamed Yassine Zarouk and Mohamed Khaldi)</i></li>
 								</ul>   
 							</div>
                         </div>
                     </div>
-					<div class="col-md-6">
-                        <div class="panel panel-default">
-                            <div class="panel-heading text-left">09:00 - 10:30 <b>Session 5: Computer Vision and Logic Programming (B034)</b></div>
-                            <div class="panel-body text-left">
-								<ul>
-									<li>Computer-Vision-based surveillance ofIntelligent Transportation Systems</li>
-									<li>A proposal for time extraction by matching LKIF Core and OWL-Time Ontologies</li>
-								</ul>
-							</div>
-                        </div>
-                    </div>
-
                 </div>				
 				
                 <div class="row">
 					<div class="col-md-12">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-left">10:30 - 11:30 <b>Coffee Break</b></div>
+                            <div class="panel-heading text-left">10:30 - 11:30 <b>Coffee Break (Coffee-lounge)</b></div>
                         </div>
                     </div>
 				</div>	
 				<div class="row">	
 					<div class="col-md-6">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-left">11:30 - 13:00 <b>Session 6: Advanced InformationExtraction and ML (B032)</b></div>
+                            <div class="panel-heading text-left">11:30 - 13:00 <b>Session 5: Advanced Information Extraction and Machine Learning (B032) - Session Chair: Marcelo Santos</b></div>
                             <div class="panel-body text-left">
 								<ul>
-									<li>Topic categorization in Portuguese news articles</li>
-									<li>NER: Supervised System to Recognize Participants and Location in Criminal News</li>
-									<li>Sentiment analysis techniques applied to regression tasks</li>
+									<li>Topic categorization in Portuguese news articles <i>(André Santos)</i></li>
+									<li>NER: Supervised System to Recognize Participants and Location in Criminal News <i>(Carla Abreu)</i></li>
+									<li>Sentiment analysis techniques applied to regression tasks <i>(José Ornelas)</i></li>
 								</ul>
 							</div>
                         </div>
                     </div>
 					<div class="col-md-6">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-left">11:30 - 13:00 <b>Session 7: Blockchain and Encryptation (B034)</b></div>
+                            <div class="panel-heading text-left">11:30 - 13:00 <b>Session 6: Computer Vision, Blockchain and Encryptation (B034) - Session Chair: Ricardo Macedo</b></div>
                             <div class="panel-body text-left">
 								<ul>
-									<li>Design of an access control system through a keyboard in the handling of an elevator</li>
-									<li>The contribution of blockchain technology for business innovation</li>
-									<li>Towards an Access Control System for IoT on Blockchain</li>
-									<li>Performance Analysis of three Classical Encryption Algorithms, Simple Substitution, Caeser, and Periodic Permutation in encrypting database transactions</li>
+									<li>Computer-Vision-based surveillance of Intelligent Transportation Systems <i>(João Neto and Rosaldo Rossetti)</i></li>
+									<li>The contribution of blockchain technology for business innovation <i>(Bruno Tavares)</i></li>
+									<li>Towards an Access Control System for IoT on Blockchain <i>(João Pedro Dias and Hugo Sereno Ferreira)</i></li>
 								</ul>
 							</div>
                         </div>
@@ -260,7 +247,7 @@
                 <div class="row">
 					<div class="col-md-12">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-left">16:00 - 17:00 <b>Coffee Break</b></div>
+                            <div class="panel-heading text-left">16:00 - 17:00 <b>Coffee Break (Coffee-lounge)</b></div>
                         </div>
                     </div>
                 </div>				
@@ -268,23 +255,23 @@
                 <div class="row">
 					<div class="col-md-6">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-left">17:00 - 19:00 <b>Session 8: System Security and Networks (B032)</b></div>
+                            <div class="panel-heading text-left">17:00 - 19:00 <b>Session 7: System Security and Networks (B032) - Session Chair: José Ornelas</b></div>
                             <div class="panel-body text-left">
 								<ul>
-									<li>Heartbeat Biometrics: A Survey</li>
-									<li>A framework to automate network packets construction</li>
-									<li>A network packets sniffer with real-time graphical analytics</li>
+									<li>Heartbeat Biometrics: A Survey <i>(Marcelo Santos and Luís Antunes)</i></li>
+									<li>A framework to automate network packets construction <i>(Cristiano Alves, Nuno Anacleto and Mário Antunes)</i></li>
+									<li>A network packets sniffer with real-time graphical analytics <i>(Daniel Pinto and Mário Antunes)</i></li>
 								</ul>
 							</div>
                         </div>
                     </div>
 					<div class="col-md-6">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-left">17:00 - 19:00 <b>Session 9: Distributed Computing (B034)</b></div>
+                            <div class="panel-heading text-left">17:00 - 19:00 <b>Session 8: Distributed Computing (B034) - Session Chair: João Pedro Dias</b></div>
                             <div class="panel-body text-left">
 								<ul>
-									<li>Utopia: A Generic Software-Defined Storage Architecture</li>
-									<li>State Synchronization by State Decomposition</li>
+									<li>Utopia: A Generic Software-Defined Storage Architecture <i>(Ricardo Macedo)</i></li>
+									<li>State Synchronization by State Decomposition <i>(Vitor Enes)</i></li>
 								</ul>
 							</div>
                         </div>
