Req #18 update schedule

--- a/schedule.html
+++ b/schedule.html
@@ -89,7 +89,7 @@
                 <div class="row">
 					<div class="col-md-12">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-left">09:30 - 11:00 <b>Invited Talk: Hugo Peixoto, PhD (B032)</b></div>
+                            <div class="panel-heading text-left">09:30 - 11:00 <b>Invited Talk: Hugo Peixoto, PhD (B032) - Session Chair: Kemilly Dearo</b></div>
                             <div class="panel-body text-left"> 								
 								<ul><li>The Evolution of Information Systems in Healthcare: A Retrospective Review</li></ul> 
 							</div>     
@@ -214,7 +214,7 @@
                     </div>
 					<div class="col-md-6">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-left">11:30 - 13:00 <b>Session 6: Computer Vision, Blockchain and Encryptation (B034) - Session Chair: Ricardo Macedo</b></div>
+                            <div class="panel-heading text-left">11:30 - 13:00 <b>Session 6: Computer Vision, Blockchain and Encryption (B034) - Session Chair: Ricardo Macedo</b></div>
                             <div class="panel-body text-left">
 								<ul>
 									<li>Computer-Vision-based surveillance of Intelligent Transportation Systems <i>(João Neto and Rosaldo Rossetti)</i></li>
@@ -237,7 +237,7 @@
                 <div class="row">
 					<div class="col-md-12">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-left">14:30 - 16:00 <b>Invited Talk: Luis Paulo Reis, PhD (B032)</b></div>
+                            <div class="panel-heading text-left">14:30 - 16:00 <b>Invited Talk: Luis Paulo Reis, PhD (B032) - Session Chair: Arnaldo Pereira</b></div>
                             <div class="panel-body text-left"> 
 							<ul><li>High-Level Learning and Cooperation for Intelligent Robotic Teams</li></ul>
 							</div>							
